Tue Jul 15 11:52:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/datafmt.c src/odbc/sql2tds.c:
	* src/dblib/unittests/rpc.c:
	- remove warnings

Tue Jul 15 11:51:59 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: from version 0.82 do all tests

Mon Jul 14 17:09:56 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* TODO.freddy src/odbc/odbc.c src/odbc/odbc_util.c:
	- small improves for SQLWCHAR support

Mon Jul 14 09:49:12 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/odbc/odbc_util.c added two symbols to a switch

Mon Jul 14 15:06:19 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c: improve for nvarchar

Mon Jul 14 10:14:29 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/prepare_query.c src/odbc/sql2tds.c:
	- minor SQLWCHAR improves

Fri Jul 11 11:25:28 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/data.c src/odbc/unittests/genparams.c:
	- make some tests run even on mssql2005
	- add initial test for NVARCHAR

Fri Jul 11 11:25:28 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/login.c: cleanup

Wed Jul  9 05:34:20 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/tds/token.c use locally provided server name correctly

Tue Jul  8 15:38:37 EDT 2008	JK Lowden <jklowden@freetds.org>
	* src/dblib/dblib.c: don't dereference a NULL dbproc. 

Tue Jul  8 13:02:14 EDT 2008	JK Lowden <jklowden@freetds.org>
	* include/tds.h src/tds/token.c:
	- use locally provided server name if the error message
	- packet doesn't include one. 

Tue Jul 08 10:46:04 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/pool/stream.c: remove memory leak

Tue Jul 08 10:44:57 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: add new constants for mssql2005

Tue Jul 08 10:39:12 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am: make win32 happy
