@@ -1,3 +1,6 @@
+Tue Jul 15 17:13:42 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* src/odbc/unittests/genparams.c: improved for WCHARs
+
 Tue Jul 15 11:52:45 CET 2008    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/ctlib/unittests/datafmt.c src/odbc/sql2tds.c:
 	* src/dblib/unittests/rpc.c:
@@ -446,4 +449,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2559 2008/07/15 09:53:00 freddy77 Exp $
+$Id: ChangeLog,v 1.2560 2008/07/15 15:14:12 freddy77 Exp $
